Update Redis service configuration in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,11 @@ services:
   redis:
     image: redis/redis-stack-server:7.2.0-v6
     ports:
-      - 6379:6379
+      - 6969:6379
+    environment:
+      - REDIS_ARGS=--requirepass password --masterauth password
     healthcheck:
-      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      test: [ "CMD", "redis-cli", "-a", "password", "--raw", "incr", "ping" ]
     volumes:
       - redis_data:/data
 
